@@ -8,7 +8,8 @@
 #' @param labels a data frame of labels, one row for each element of res
 #' @keywords internal
 list_to_dataframe <- function(res, labels = NULL) {
-  res <- compact(res)
+  null <- vapply(res, is.null, logical(1))
+  res <- res[!null]
   if (length(res) == 0) return(data.frame())
 
   atomic <- unlist(lapply(res, is.atomic))
@@ -37,13 +38,14 @@ list_to_dataframe <- function(res, labels = NULL) {
     labels <- data.frame(.id = names(res), stringsAsFactors = FALSE)
   }
 
-  if (!is.null(labels) && nrow(labels) == length(res)) {
+  if (!is.null(labels) && nrow(labels) == length(null)) {
     missing_names <- names(labels) == ""
     names(labels)[missing_names] <- paste("X", seq_len(sum(missing_names)),
        sep = "")
     
     cols <- setdiff(names(labels), names(resdf))
-    resdf <- cbind(labels[rep(1:nrow(labels), rows), cols, drop=FALSE], resdf)
+    labels <- labels[!null, cols, drop = FALSE]
+    resdf <- cbind(labels[rep(1:nrow(labels), rows), , drop = FALSE], resdf)
   }
   
   unrowname(resdf)
