@@ -16,6 +16,9 @@ BUG FIXES
 
 * `**ply` now works when passed a list of functions
 
+* `*dply` now correctly names output even when some output combinations are
+  missing (NULL)
+
 * `a*ply` now correctly works with zero length margins, operating on the
   entire object
 
